[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scripts/HotbarPanelController.gd" type="Script" id=2]
[ext_resource path="res://assets/items/pick.png" type="Texture" id=3]
[ext_resource path="res://assets/hotbarIconBackground.png" type="Texture" id=4]
[ext_resource path="res://assets/items/gun.png" type="Texture" id=5]
[ext_resource path="res://assets/selection.png" type="Texture" id=6]
[ext_resource path="res://scripts/GameState.gd" type="Script" id=7]
[ext_resource path="res://scripts/ItemSpawnManager.gd" type="Script" id=8]
[ext_resource path="res://scripts/InventoryInputController.gd" type="Script" id=9]
[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/entities/Player.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 200, 5 )

[sub_resource type="CanvasItemMaterial" id=2]


[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 1020.0
margin_bottom = 40.0

[node name="HotbarPanel" type="Panel" parent="CanvasLayer/UI"]
margin_right = 364.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Grid" type="GridContainer" parent="CanvasLayer/UI/HotbarPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 360.0
margin_bottom = 36.0
columns = 10

[node name="SlotBackground1" type="ColorRect" parent="CanvasLayer/UI/HotbarPanel/Grid"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="ToolSprite" type="Sprite" parent="CanvasLayer/UI/HotbarPanel/Grid/SlotBackground1"]
z_index = 1
texture = ExtResource( 3 )
centered = false

[node name="BackgroundSprite" type="Sprite" parent="CanvasLayer/UI/HotbarPanel/Grid/SlotBackground1"]
texture = ExtResource( 4 )
centered = false

[node name="SlotNumber" type="Label" parent="CanvasLayer/UI/HotbarPanel/Grid/SlotBackground1"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 16.0
margin_bottom = 14.0
text = "1"

[node name="SlotBackground2" type="ColorRect" parent="CanvasLayer/UI/HotbarPanel/Grid"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="ToolSprite" type="Sprite" parent="CanvasLayer/UI/HotbarPanel/Grid/SlotBackground2"]
z_index = 1
texture = ExtResource( 5 )
centered = false

[node name="BackgroundSprite" type="Sprite" parent="CanvasLayer/UI/HotbarPanel/Grid/SlotBackground2"]
texture = ExtResource( 4 )
centered = false

[node name="SlotNumber" type="Label" parent="CanvasLayer/UI/HotbarPanel/Grid/SlotBackground2"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 16.0
margin_bottom = 14.0
text = "2"

[node name="SelectionSquare" type="Sprite" parent="CanvasLayer/UI/HotbarPanel/Grid"]
texture = ExtResource( 6 )
centered = false

[node name="GlobalControllers" type="Node" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="GlobalControllers"]
wait_time = 10.0
one_shot = true

[node name="GameState" type="Node" parent="GlobalControllers"]
script = ExtResource( 7 )

[node name="ItemSpawnManager" type="Node" parent="GlobalControllers"]
script = ExtResource( 8 )

[node name="InventoryInputController" type="Node" parent="GlobalControllers"]
script = ExtResource( 9 )

[node name="Floor" type="StaticBody2D" parent="." groups=[
"Environment",
]]
position = Vector2( -923.81, 599.713 )
scale = Vector2( 10, 1 )
collision_layer = 7
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Floor"]
margin_top = 2.0
margin_right = 400.0
margin_bottom = 12.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 200, 7 )
shape = SubResource( 1 )

[node name="TileMap" parent="." instance=ExtResource( 10 )]

[node name="Background" type="Node2D" parent="."]
z_index = -10

[node name="ColorRect" type="ColorRect" parent="Background"]
material = SubResource( 2 )
margin_left = -710.0
margin_top = -310.0
margin_right = 1340.0
margin_bottom = 900.0
color = Color( 0.27451, 0.733333, 0.980392, 0.576471 )

[node name="Player" parent="." instance=ExtResource( 11 )]
position = Vector2( 0, 0 )

[node name="PlayerCamera" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2, 2 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
editor_draw_drag_margin = true

